# Copyright (C) 2010, 2011, 2015
# Martin Lambers <marlam@marlam.de>
#
# Copying and distribution of this file, with or without modification, are
# permitted in any medium without royalty provided the copyright notice and this
# notice are preserved. This file is offered as-is, without any warranty.

AM_CPPFLAGS = -I$(top_srcdir)/src
noinst_LIBRARIES = libbase.a
libbase_a_SOURCES = \
	str.h str.cpp \
	msg.h msg.cpp \
	dbg.h dbg.cpp \
	exc.h exc.cpp \
	chk.h \
	opt.h opt.cpp \
	tmr.h tmr.cpp \
	ser.h ser.cpp \
	blb.h \
	pth.h pth.cpp \
	gettext.h
